Add CI workflow for tests

--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -1,6 +1,10 @@
 name: CI Test
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   test:
@@ -40,18 +44,35 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies       # Install required packages
+      - name: Install dependencies      # Install required packages in Veltraxor folder
         working-directory: Veltraxor
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt pytest jsonschema redis psycopg2-binary
 
-      - name: Wait for services          # Wait until Postgres and Redis are ready
+      - name: Wait for Postgres to be ready
         run: |
           until pg_isready -h localhost -p 5432 -U test; do sleep 5; done
-          until redis-cli -h localhost ping; do sleep 5; done
 
-      - name: Run all tests              # Run pytest in Veltraxor/test
+      - name: Wait for Redis to be ready via Python
+        working-directory: Veltraxor
+        run: |
+          python - << 'EOF'
+import time, redis
+host = "localhost"; port = 6379
+for _ in range(30):
+    try:
+        r = redis.Redis(host=host, port=port, socket_connect_timeout=1)
+        if r.ping():
+            print("Redis is ready")
+            exit(0)
+    except Exception:
+        time.sleep(2)
+print("Redis did not become ready in time", flush=True)
+exit(1)
+EOF
+
+      - name: Run all tests               # Run pytest in Veltraxor/test
         working-directory: Veltraxor
         env:
           VELTRAX_API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
