--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,80 +1,71 @@
-name: build-test-release
+name: CI Test
 
 on:
   push:
     branches: [ main ]
-    tags:    [ 'v*.*.*' ]   # Tagging triggers the release step
   pull_request:
+    branches: [ main ]
 
 jobs:
-  build-test:
+  test:
     runs-on: ubuntu-latest
 
-    # --- inject secrets here ---
-    env:
-      XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: testdb
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U test -d testdb"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install redis-cli tool
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y redis-tools
+
+      - name: Install Python dependencies
+        working-directory: GeniusTrail/Veltraxor
         run: |
           python -m pip install --upgrade pip
           pip install -e .[dev]
 
-      - name: Run pytest
-        run: pytest -q
-
-      - name: Build wheel
-        run: python -m build --wheel --outdir dist
-
-      - name: Upload wheel artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: veltraxor-wheel
-          path: dist/*.whl
-
-  publish:
-    # Only executed when tag (vX.Y.Z) is pushed to main
-    needs: build-test
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: production   # Optional: GitHub environment
-
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Build & publish to PyPI
-        env:
-          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+      - name: Wait for Postgres to be ready
         run: |
-          python -m pip install --upgrade pip build twine
-          python -m build --wheel --outdir dist
-          twine upload --non-interactive -u token -p "$PYPI_TOKEN" dist/*
+          until pg_isready -h localhost -p 5432 -U test; do sleep 5; done
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Wait for Redis to be ready
+        run: |
+          until redis-cli -h localhost ping; do sleep 5; done
 
-      - name: Build & push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/veltraxor:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/veltraxor:${{ github.ref_name }}
+      - name: Run all tests
+        working-directory: GeniusTrail/Veltraxor
+        env:
+          VELTRAX_API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
+          PYTHONUTF8: "1"
+        run: pytest test -q
