--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
         ports: [ '6379:6379' ]
         options: >-
           --health-cmd="redis-cli ping"
-          --health-interval=10s
-          --health-timeout=5s
+          --health-interval=10s"
+          --health-timeout=5s"
           --health-retries=5
 
     steps:
@@ -42,14 +42,10 @@ jobs:
         with:
           python-version: "3.10"
 
-      # ───────────────────────────────────────────────────────────────
-      # Install system tools – redis-cli & docker-compose plugin
-      # ───────────────────────────────────────────────────────────────
       - name: Install system tools
         run: |
           sudo apt-get update
           sudo apt-get install -y redis-tools docker-compose-plugin
-          # restore legacy binary name expected by some scripts
           sudo ln -s $(which docker) /usr/local/bin/docker-compose
 
       - name: Install Python dependencies
@@ -57,7 +53,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .[dev]
 
-      # Inject dummy credentials so guards behave predictably
       - name: Inject dummy env vars
         run: |
           echo "XAI_API_KEY=dummy"   >> $GITHUB_ENV
