--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,21 +17,17 @@ jobs:
           POSTGRES_DB: testdb
           POSTGRES_USER: test
           POSTGRES_PASSWORD: test
-        ports: [ '5432:5432' ]
+        ports:
+          - '5432:5432'
         options: >-
           --health-cmd="pg_isready -U test -d testdb"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
 
       redis:
         image: redis:7
-        ports: [ '6379:6379' ]
+        ports:
+          - '6379:6379'
         options: >-
           --health-cmd="redis-cli ping"
-          --health-interval=10s"
-          --health-timeout=5s"
-          --health-retries=5
 
     steps:
       - name: Check out code
@@ -40,13 +36,12 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - name: Install system tools
         run: |
           sudo apt-get update
           sudo apt-get install -y redis-tools docker-compose-plugin
-          sudo ln -s $(which docker) /usr/local/bin/docker-compose
 
       - name: Install Python dependencies
         run: |
@@ -59,15 +54,7 @@ jobs:
           echo "XAI_API_URL=http://localhost/dummy" >> $GITHUB_ENV
           echo "VELTRAX_API_TOKEN=dummy" >> $GITHUB_ENV
 
-      - name: Wait for Postgres to be ready
-        run: |
-          until pg_isready -h localhost -p 5432 -U test; do sleep 5; done
-
-      - name: Wait for Redis to be ready
-        run: |
-          until redis-cli -h localhost ping; do sleep 5; done
-
       - name: Run all tests
         env:
-          PYTHONUTF8: "1"
-        run: pytest -q
+          PYTHONUTF8: '1'
+        run: pytest test -q
