fix: clean up and update CI workflow

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,6 @@
 [pytest]
-# only look in the test/ directory
+markers =
+  integration: mark integration tests
 testpaths = test
-# only pick up files starting with test_
 python_files = test_*.py
-# include project root on sys.path so imports like `from api_server import app` work
 pythonpath = .
