--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,24 +10,28 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    # GitHub Actions services: Redis and Postgres
     services:
+      redis:
+        image: redis:7
+        ports: ['6379:6379']
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=5s
+          --health-timeout=2s
+          --health-retries=5
       postgres:
         image: postgres:15
         env:
           POSTGRES_DB: testdb
           POSTGRES_USER: test
           POSTGRES_PASSWORD: test
-        ports:
-          - '5432:5432'
+        ports: ['5432:5432']
         options: >-
           --health-cmd="pg_isready -U test -d testdb"
-
-      redis:
-        image: redis:7
-        ports:
-          - '6379:6379'
-        options: >-
-          --health-cmd="redis-cli ping"
+          --health-interval=5s
+          --health-timeout=2s
+          --health-retries=5
 
     steps:
       - name: Check out code
@@ -38,23 +42,20 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install system tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y redis-tools docker-compose-plugin
-
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .[dev]
 
-      - name: Inject dummy env vars
+      - name: Inject dummy environment variables
         run: |
           echo "XAI_API_KEY=dummy"   >> $GITHUB_ENV
           echo "XAI_API_URL=http://localhost/dummy" >> $GITHUB_ENV
           echo "VELTRAX_API_TOKEN=dummy" >> $GITHUB_ENV
 
-      - name: Run all tests
+      - name: Run pytest
         env:
+          CI: "true"
+          SKIP_SERVICE_START: "true"
           PYTHONUTF8: '1'
         run: pytest test -q
