--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,59 +10,59 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    # Install Docker and Docker Compose
+    # Set up Docker
     steps:
       - name: Set up Docker
         run: |
           sudo apt-get update
           sudo apt-get install -y docker.io docker-compose
 
-      # GitHub Actions services: Redis and Postgres
-      services:
-        redis:
-          image: redis:7
-          ports: ['6379:6379']
-          options: >-
-            --health-cmd="redis-cli ping"
-            --health-interval=5s
-            --health-timeout=2s
-            --health-retries=5
-        postgres:
-          image: postgres:15
-          env:
-            POSTGRES_DB: testdb
-            POSTGRES_USER: test
-            POSTGRES_PASSWORD: test
-          ports: ['5432:5432']
-          options: >-
-            --health-cmd="pg_isready -U test -d testdb"
-            --health-interval=5s
-            --health-timeout=2s
-            --health-retries=5
+    # GitHub Actions services: Redis and Postgres
+    services:
+      redis:
+        image: redis:7
+        ports: ['6379:6379']
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=5s
+          --health-timeout=2s
+          --health-retries=5
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: testdb
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+        ports: ['5432:5432']
+        options: >-
+          --health-cmd="pg_isready -U test -d testdb"
+          --health-interval=5s
+          --health-timeout=2s
+          --health-retries=5
 
-      steps:
-        - name: Check out code
-          uses: actions/checkout@v4
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
 
-        - name: Set up Python 3.10
-          uses: actions/setup-python@v4
-          with:
-            python-version: '3.10'
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-        - name: Install Python dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -e .[dev]
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[dev]
 
-        - name: Inject dummy environment variables
-          run: |
-            echo "XAI_API_KEY=dummy"   >> $GITHUB_ENV
-            echo "XAI_API_URL=http://localhost/dummy" >> $GITHUB_ENV
-            echo "VELTRAX_API_TOKEN=dummy" >> $GITHUB_ENV
+      - name: Inject environment variables
+        run: |
+          echo "XAI_API_KEY=dummy"   >> $GITHUB_ENV
+          echo "XAI_API_URL=http://localhost/dummy" >> $GITHUB_ENV
+          echo "VELTRAX_API_TOKEN=${{ secrets.VELTRAX_API_TOKEN }}" >> $GITHUB_ENV
 
-        - name: Run pytest
-          env:
-            CI: "true"
-            SKIP_SERVICE_START: "true"
-            PYTHONUTF8: '1'
-          run: pytest test -q
+      - name: Run pytest
+        env:
+          CI: "true"
+          SKIP_SERVICE_START: "true"
+          PYTHONUTF8: '1'
+        run: pytest test -q
