ci: add CI test workflow, fix token auth and pytest config

--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -1,75 +1,81 @@
-name: build-test-release
+# File: .github/workflows/ci_test.yml
+name: CI Test Environment
 
 on:
   push:
     branches: [ main ]
-    tags:    [ 'v*.*.*' ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  build-test:
+  test:
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis:7
+        ports: ["6379:6379"]
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=5s
+          --health-timeout=3s
+          --health-retries=5
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: testdb
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+        ports: ["5432:5432"]
+        options: >-
+          --health-cmd="pg_isready -U test -d testdb"
+          --health-interval=5s
+          --health-timeout=3s
+          --health-retries=5
+
+    strategy:
+      matrix:
+        python-version: ["3.13.5"]
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Install OS packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            build-essential git curl wget unzip netcat-openbsd \
+            libpq-dev redis-tools postgresql-client \
+            libssl-dev libffi-dev
+
+      - name: Set up Python ${{ matrix.python-version }} and cache pip
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
           pip install -e .[dev]
 
-      - name: Run pytest
-        run: pytest -q
-
-      - name: Build wheel
-        run: python -m build --wheel --outdir dist
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@v4
-        with:
-          name: veltraxor-wheel
-          path: dist/*.whl
-
-  publish:
-    needs: build-test
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    environment: production
-
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Build & publish to PyPI
-        env:
-          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+      - name: Export environment variables
         run: |
-          python -m pip install --upgrade pip build twine
-          python -m build --wheel --outdir dist
-          twine upload --non-interactive -u token -p "$PYPI_TOKEN" dist/*
+          echo "VELTRAX_API_TOKEN=${{ secrets.VELTRAX_API_TOKEN }}" >> $GITHUB_ENV
+          echo "CI=true"                     >> $GITHUB_ENV
+          echo "SKIP_SERVICE_START=true"     >> $GITHUB_ENV
+          echo "PYTHONUTF8=1"                >> $GITHUB_ENV
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Display versions for debug
+        run: |
+          echo "Python: $(python --version)"
+          echo "pip: $(pip --version)"
+          echo "Redis CLI: $(redis-cli --version || echo 'not installed')"
+          echo "Postgres client: $(psql --version || echo 'not installed')"
 
-      - name: Build & push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/veltraxor:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/veltraxor:${{ github.ref_name }}
+      - name: Run pytest
+        run: pytest test -q
