--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
-markers =
-  integration: mark integration tests
-testpaths = test
-python_files = test_*.py
 pythonpath = .
+testpaths    = test
+python_files = test_*.py
+markers =
+    integration: mark integration tests
+cache_dir    = .pytest_cache
+addopts      = -q
