--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,39 @@
-# .github/workflows/release.yml
-# CI pipeline: build wheel & upload to PyPI when a version tag is pushed.
-
 name: Publish Python Package
 
 on:
   push:
     tags:
-      - 'v*.*.*'        # Trigger only when tag matches v1.2.3 pattern
+      - 'v*.*.*'
 
 permissions:
-  contents: read        # Minimum permissions for checkout
+  contents: read
 
 jobs:
   deploy:
-    name: Build and publish
+    name: Build & publish
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Install OS dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            build-essential libssl-dev libffi-dev
+
+      - name: Set up Python 3.13.5
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.13.5"
 
       - name: Install build tools
         run: |
-          python -m pip install --upgrade pip
-          pip install build
+          python -m pip install --upgrade pip build twine
 
-      - name: Build sdist and wheel
-        run: python -m build
+      - name: Build sdist & wheel
+        run: python -m build --sdist --wheel --outdir dist
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
