--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,12 +1,12 @@
 # .github/workflows/lint.yml
 name: Lint and Type Check
+
 on:
-  pull_request:
-    paths:
-      - '**/*.py'
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   lint:
@@ -14,18 +14,33 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.13']
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Ruff lint
-        uses: astral-sh/ruff-action@v3                                   :contentReference[oaicite:0]{index=0}
-      - name: Black format check
-        uses: psf/black@stable                                           :contentReference[oaicite:1]{index=1}
-      - name: Mypy strict check
+
+      - name: Upgrade pip & Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mypy
-          mypy --strict .
+          pip install -e .[dev]
+          pip install mypy ruff black pytest requests types-requests types-setuptools jsonschema pydantic-settings
+
+      - name: Run ruff lint
+        run: ruff check .
+
+      - name: Run black format
+        run: black .
+
+      - name: Check black formatting
+        run: black --check .
+
+      - name: Run mypy type check
+        run: python -m mypy .
+
+      - name: Run pytest
+        run: pytest -q
