--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -1,4 +1,3 @@
-# File: .github/workflows/ci_test.yml
 name: CI Test Environment
 
 on:
@@ -53,7 +52,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+          cache: pip
 
       - name: Install Python dependencies
         run: |
@@ -62,6 +61,7 @@ jobs:
             pip install -r requirements.txt
           fi
           pip install -e .[dev]
+          pip install jsonschema pydantic-settings
 
       - name: Export environment variables
         run: |
