--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,3 @@
-# .github/workflows/lint.yml
 name: Lint and Type Check
 
 on:
@@ -24,19 +23,18 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Upgrade pip & Install dependencies
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install project and dev dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -e .[dev]
           pip install mypy ruff black pytest requests types-requests types-setuptools jsonschema pydantic-settings
 
       - name: Run ruff lint
         run: ruff check .
 
-      - name: Run black format
-        run: black .
-
-      - name: Check black formatting
+      - name: Check Black formatting
         run: black --check .
 
       - name: Run mypy type check
