--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: Lint and Type Check
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -26,10 +26,10 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Install project and dev dependencies
+      - name: Install dependencies
         run: |
           pip install -e .[dev]
-          pip install mypy ruff black pytest requests types-requests types-setuptools jsonschema pydantic-settings
+          pip install jsonschema pydantic-settings
 
       - name: Run ruff lint
         run: ruff check .
@@ -39,6 +39,3 @@ jobs:
 
       - name: Run mypy type check
         run: python -m mypy .
-
-      - name: Run pytest
-        run: pytest -q
