--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,10 +1,8 @@
-# .github/workflows/security.yml
 name: Security Scan
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -19,18 +17,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Trivy FS scan
-        uses: aquasecurity/trivy-action@v0.31.0
+        uses: aquasecurity/trivy-action@0.14.0
         with:
           scan-type: fs
+          trivy-version: 0.31.0
           severity: CRITICAL,HIGH
 
   grype-scan:
     name: Grype Vulnerability Scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Run Grype scan
         uses: anchore/scan-action@v6.1.0
         with:
