--- a/.github/workflows/api_test.yml
+++ b/.github/workflows/api_test.yml
@@ -3,7 +3,7 @@ name: API Test
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:    # allow manual runs
+  workflow_dispatch:
 
 jobs:
   api-test:
@@ -11,10 +11,6 @@ jobs:
     env:
       PYTHONUTF8: "1"
       VELTRAX_API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
-    defaults:
-      run:
-        shell: pwsh
-        working-directory: C:\Chatbot 8000
 
     steps:
       - name: Check out repository
@@ -26,25 +22,36 @@ jobs:
           python-version: "3.13"
 
       - name: Create & activate virtual environment, install deps
+        shell: pwsh
         run: |
+          # Remove existing venv if present
           if (Test-Path .\.venv) { Remove-Item .\.venv -Recurse -Force }
           python -m venv .venv
           .\.venv\Scripts\Activate.ps1
           python -m pip install --upgrade pip
+          # Install editable dev dependencies
           pip install -e .[dev]
           pip install uvicorn fastapi httpx python-dotenv prometheus_client
+
       - name: Start API server in background
+        shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
           Start-Process -NoNewWindow `
             -FilePath .\.venv\Scripts\python.exe `
             -ArgumentList '-m uvicorn api_server:app --host 127.0.0.1 --port 8000 --log-level info'
+          # Wait for the server to start
           Start-Sleep -Seconds 5
+
       - name: Test /ping endpoint
+        shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
+          # Expect a valid response (200 OK or JSON/text) from /ping
           Invoke-RestMethod -Uri "http://127.0.0.1:8000/ping" -Method Get | Write-Host
+
       - name: Test /chat endpoint
+        shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
           $body = @{ prompt="Hello"; history=@() } | ConvertTo-Json
@@ -53,8 +60,13 @@ jobs:
             -Method Post `
             -Headers @{ Authorization="Bearer $Env:VELTRAX_API_TOKEN" } `
             -Body $body -ContentType "application/json" | Write-Host
+
       - name: Tear down server
+        shell: pwsh
         run: |
-          # find the UVicorn process and kill it
-          $pid = (Get-NetTCPConnection -LocalPort 8000).OwningProcess
-          if ($pid) { Stop-Process -Id $pid -Force }
+          # Kill whatever is listening on port 8000
+          $conn = Get-NetTCPConnection -LocalPort 8000 -ErrorAction SilentlyContinue
+          if ($conn) {
+            $pid = $conn.OwningProcess
+            if ($pid) { Stop-Process -Id $pid -Force }
+          }
