--- a/.github/workflows/grok_api_ci.yml
+++ b/.github/workflows/grok_api_ci.yml
@@ -1,4 +1,34 @@
-name: grok_api_ci.yml
+name: Grok 3 API Exception & Failure Tests
+
+# Only run on the dedicated feature branch to isolate from main CI
 on:
+  push:
+    branches: [ feature/grok3-failure-tests ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
+  grok-exceptions:
+    runs-on: ubuntu-latest
+    env:
+      CI: "true"
+      VELTRAX_API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Python 3.13
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          # install runtime deps
+          pip install -r requirements.txt
+          # install development/test deps (ensure respx is included)
+          pip install -e .[dev]
+
+      - name: Run Grok API tests
+        run: pytest -q test/test_grok_api.py
