--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -34,7 +34,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.13.5"]
+        python-version: [ "3.13.5" ]
 
     steps:
       - name: Checkout repository
@@ -57,10 +57,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          fi
-          pip install -e .[dev]
+          pip install -r requirements.txt
+          pip install -e .[dev]  # install dev dependencies including respx
           pip install jsonschema pydantic-settings
 
       - name: Export environment variables
