--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,4 +38,4 @@ jobs:
         run: black --check .
 
       - name: Run mypy type check
-        run: python -m mypy
+        run: python -m mypy .
