ci: startup robustness tests

--- a/.github/workflows/startup_robustness_tests.yml
+++ b/.github/workflows/startup_robustness_tests.yml
@@ -1,108 +1,42 @@
-import os
-import sys
-import types
-import pytest
-from fastapi.testclient import TestClient
+name: Startup Robustness Tests
 
-# Stub out optional_client and db_client so production imports succeed without errors
-optional_client_stub = types.ModuleType("optional_client")
-def initialize_stub(*args, **kwargs):
-    return True
-optional_client_stub.initialize = initialize_stub
-sys.modules["optional_client"] = optional_client_stub
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
-db_client_stub = types.ModuleType("db_client")
-def connect_stub(*args, **kwargs):
-    return True
-db_client_stub.connect = connect_stub
-sys.modules["db_client"] = db_client_stub
+jobs:
+  startup-robustness:
+    runs-on: windows-latest
 
-from veltraxor import app
-from config import get_settings
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-client = TestClient(app)
+      - name: Setup Python 3.13
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
 
-def test_ping_endpoint():
-    """
-    Basic liveness check: service starts and /ping must respond with 200.
-    """
-    response = client.get("/ping")
-    assert response.status_code == 200
-    assert response.json() == {"pong": True}
+      - name: Create venv & install dependencies
+        shell: pwsh
+        run: |
+          python -m venv .venv
+          Set-Item -Path Env:VELTRAX_API_TOKEN -Value "${{ secrets.VELTRAX_API_TOKEN }}"
+          .\.venv\Scripts\Activate.ps1
+          pip install --upgrade pip
+          pip install respx
+          pip install -e .[dev]
 
-def test_chat_unauthorized(monkeypatch):
-    """
-    /chat requires a valid token; without it should return 401.
-    """
-    monkeypatch.delenv("VELTRAX_API_TOKEN", raising=False)
-    response = client.post("/chat", json={"prompt": "hi"})
-    assert response.status_code == 401
+      - name: Run startup robustness tests
+        shell: pwsh
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          python -m pytest test/integration/test_startup_robustness.py -v
 
-def test_chat_authorized(monkeypatch):
-    """
-    With correct token in environment and header, /chat returns 200 and includes expected fields.
-    """
-    monkeypatch.setenv("VELTRAX_API_TOKEN", "test-token")
-    headers = {"Authorization": "Bearer test-token"}
-    response = client.post("/chat", json={"prompt": "hello"}, headers=headers)
-    assert response.status_code == 200
-    data = response.json()
-    assert "response" in data
-    assert isinstance(data["duration_ms"], (int, float))
-    assert data["duration_ms"] >= 0
-
-def test_optional_service_unavailable(monkeypatch):
-    """
-    Simulate optional external service initialization failure:
-    service should still start, and /health reports external_service=False.
-    """
-    monkeypatch.setenv("VELTRAX_API_TOKEN", "test-token")
-    monkeypatch.setenv("REDIS_URL", "redis://localhost:6379/0")
-    monkeypatch.setenv("DATABASE_URL", "postgresql://user:pass@localhost:5432/db")
-
-    oc = pytest.importorskip("optional_client")
-    monkeypatch.setattr(oc, "initialize", lambda *args, **kwargs: (_ for _ in ()).throw(RuntimeError("init fail")))
-
-    _ = get_settings()  # trigger initialization
-    response = client.get("/health")
-    assert response.status_code == 200
-    body = response.json()
-    assert body.get("external_service") is False
-
-def test_required_service_unavailable(monkeypatch):
-    """
-    Simulate required dependency failure: startup should fail fast.
-    """
-    monkeypatch.setenv("VELTRAX_API_TOKEN", "test-token")
-    monkeypatch.setenv("REDIS_URL", "redis://localhost:6379/0")
-
-    dbc = pytest.importorskip("db_client")
-    monkeypatch.setattr(dbc, "connect", lambda *args, **kwargs: (_ for _ in ()).throw(RuntimeError("db down")))
-
-    with pytest.raises(Exception):
-        get_settings()
-
-def test_env_config_variations(monkeypatch):
-    """
-    Startup with different environment configurations, e.g., disabling optional feature.
-    """
-    monkeypatch.setenv("VELTRAX_API_TOKEN", "test-token")
-    monkeypatch.setenv("REDIS_URL", "redis://localhost:6379/0")
-    monkeypatch.setenv("DATABASE_URL", "postgresql://user:pass@localhost:5432/db")
-    monkeypatch.setenv("ENABLE_FEATURE_X", "false")
-
-    _ = get_settings()
-    response = client.get("/health")
-    body = response.json()
-    assert body.get("feature_x_enabled") is False
-
-def test_malformed_config(monkeypatch):
-    """
-    Startup with malformed environment values should fail.
-    """
-    monkeypatch.setenv("VELTRAX_API_TOKEN", "test-token")
-    monkeypatch.setenv("REDIS_URL", "not-a-valid-url")
-    monkeypatch.setenv("DATABASE_URL", "postgresql://user:pass@localhost:5432/db")
-
-    with pytest.raises(Exception):
-        get_settings()
+      - name: Run full test suite
+        shell: pwsh
+        run: |
+          .\.venv\Scripts\Activate.ps1
+          python -m pytest -q
