--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ select = ["E", "F", "W", "C90"]
 ignore = ["E203", "E501"]
 
 [tool.ruff.lint.per-file-ignores]
-"api_server.py" = ["F401", "F841"]
-"test/integration/*.py" = ["F401"]
+"api_server.py"           = ["F401", "F841"]
+"test/integration/*.py"   = ["F401"]
+"tests/conftest.py"       = ["F401"]
